// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <Logo
    gutterBottom={true}
  />
  <withContext(createMutationContainer(PostCommentFormContainer))
    assetID="asset-id"
  />
  <div
    key="comment-1"
  >
    <Relay(CommentContainer)
      data={
        Object {
          "id": "comment-1",
        }
      }
      gutterBottom={true}
    />
    <Relay(ReplyListContainer)
      comment={
        Object {
          "id": "comment-1",
        }
      }
    />
  </div>
  <div
    key="comment-2"
  >
    <Relay(CommentContainer)
      data={
        Object {
          "id": "comment-2",
        }
      }
      gutterBottom={true}
    />
    <Relay(ReplyListContainer)
      comment={
        Object {
          "id": "comment-2",
        }
      }
    />
  </div>
</div>
`;

exports[`renders when comments is null 1`] = `
<div>
  Comments unavailable
</div>
`;

exports[`when there is more disables load more button 1`] = `
<div>
  <Logo
    gutterBottom={true}
  />
  <withContext(createMutationContainer(PostCommentFormContainer))
    assetID="asset-id"
  />
  <div
    key="comment-1"
  >
    <Relay(CommentContainer)
      data={
        Object {
          "id": "comment-1",
        }
      }
      gutterBottom={true}
    />
    <Relay(ReplyListContainer)
      comment={
        Object {
          "id": "comment-1",
        }
      }
    />
  </div>
  <div
    key="comment-2"
  >
    <Relay(CommentContainer)
      data={
        Object {
          "id": "comment-2",
        }
      }
      gutterBottom={true}
    />
    <Relay(ReplyListContainer)
      comment={
        Object {
          "id": "comment-2",
        }
      }
    />
  </div>
  <withPropsOnChange(Button)
    disabled={true}
    fullWidth={true}
    id="talk-stream--load-more"
    invert={true}
    onClick={[Function]}
    secondary={true}
  >
    Load More
  </withPropsOnChange(Button)>
</div>
`;

exports[`when there is more renders a load more button 1`] = `
<div>
  <Logo
    gutterBottom={true}
  />
  <withContext(createMutationContainer(PostCommentFormContainer))
    assetID="asset-id"
  />
  <div
    key="comment-1"
  >
    <Relay(CommentContainer)
      data={
        Object {
          "id": "comment-1",
        }
      }
      gutterBottom={true}
    />
    <Relay(ReplyListContainer)
      comment={
        Object {
          "id": "comment-1",
        }
      }
    />
  </div>
  <div
    key="comment-2"
  >
    <Relay(CommentContainer)
      data={
        Object {
          "id": "comment-2",
        }
      }
      gutterBottom={true}
    />
    <Relay(ReplyListContainer)
      comment={
        Object {
          "id": "comment-2",
        }
      }
    />
  </div>
  <withPropsOnChange(Button)
    disabled={false}
    fullWidth={true}
    id="talk-stream--load-more"
    invert={true}
    onClick={[Function]}
    secondary={true}
  >
    Load More
  </withPropsOnChange(Button)>
</div>
`;
